# clippy

./: .gitignore  README.md
src/: CMakeLists.txt  llm.cpp  llm.hpp  main.cpp  ocrtask.cpp  ocrtask.h  pdfextract.cpp  pdfextract.h  pdfparser.cpp  pdfparser.h
